# Robotic-Tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: dist_of_laser.h  laser_pos.h  rad_conv.h  time_difference.h
include/internal/: config.h  conversions.h  physics_constants.h
include/roboto/: lidar_helpers.h
include/roboto/internal/: config.h  conversions.h
notes/: Localization.md  Stage_Ros2_Installation.md
src/: dist_of_laser.cpp  laser_pos.cpp  main.cpp  rad_conv.cpp  roboto.cpp
src/point_follow/: CMakeLists.txt  package.xml
src/point_follow/launch/: point_follow_config.rviz  point_follow_config2.rviz  point_follow_launch.py
src/point_follow/src/: point_approach.cpp
src/point_follow/world/: cave.yaml
src/roboto_cli_tools/: CMakeLists.txt  package.xml
src/roboto_cli_tools/src/: roboto.cpp
src/roboto_cli_tools/src/laser_dist/: dist_of_laser.cpp  dist_of_laser.h
src/roboto_cli_tools/src/laser_pos/: laser_pos.cpp  laser_pos.h
src/roboto_core/: CMakeLists.txt  package.xml
src/roboto_core/include/roboto_core/: lidar_helpers.h
src/roboto_core/include/roboto_core/internal/: config.h  conversions.h  physics_constants.h
src/roboto_core/src/: lidar_helpers.cpp
src/roboto_tests/: CMakeLists.txt  package.xml
src/roboto_tests/src/: lidar_helpers_test.cpp
src/stop_functions/: CMakeLists.txt  package.xml
tools/: CMakeLists.txt  dist_of_laser.cpp  laser_pos.cpp  laser_pos.h  roboto.cpp  subroutine_base.h
tools/laser_dist/: dist_of_laser.cpp  dist_of_laser.h
tools/laser_pos/: laser_pos.cpp  laser_pos.h
